tests/paczka1/fuzzy1/25701871.err
Error in line 7: rfFK A679 20,0
Error in line 17: t3GS2 A679 31,2
Error in line 31: 8lHaQB A848 4,8
Error in line 33: GgrKgbRic3 S359 8,9
